-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 7, 8, 11
-
Component/s: core-libs
-
b18
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8205302 | 11.0.1 | Roger Riggs | P3 | Resolved | Fixed | team |
| JDK-8225700 | openjdk8u232 | Roger Riggs | P3 | Resolved | Fixed | b01 |
| JDK-8223274 | 8u231 | Ivan Gerasimov | P3 | Resolved | Fixed | b01 |
| JDK-8229617 | emb-8u231 | Ivan Gerasimov | P3 | Resolved | Fixed | b01 |
| JDK-8223340 | 7u241 | Ivan Gerasimov | P3 | Resolved | Fixed | b01 |
JNI exception pending in initializeEncoding of jni_util.c:856
The returns are not checked.
String_init_ID = (*env)->GetMethodID(env, strClazz,
"<init>", "([BLjava/lang/String;)V");
String_coder_ID = (*env)->GetFieldID(env, strClazz, "coder", "B");
String_value_ID = (*env)->GetFieldID(env, strClazz, "value", "[B");
The returns are not checked.
String_init_ID = (*env)->GetMethodID(env, strClazz,
"<init>", "([BLjava/lang/String;)V");
String_coder_ID = (*env)->GetFieldID(env, strClazz, "coder", "B");
String_value_ID = (*env)->GetFieldID(env, strClazz, "value", "[B");
- backported by
-
JDK-8205302 JNI exception pending in initializeEncoding of jni_util.c
-
- Resolved
-
-
JDK-8223274 JNI exception pending in initializeEncoding of jni_util.c
-
- Resolved
-
-
JDK-8223340 JNI exception pending in initializeEncoding of jni_util.c
-
- Resolved
-
-
JDK-8225700 JNI exception pending in initializeEncoding of jni_util.c
-
- Resolved
-
-
JDK-8229617 JNI exception pending in initializeEncoding of jni_util.c
-
- Resolved
-