8197930: JNI exception pending in initializeEncoding of jni_util.c Reviewed-by: mchung, stuefe